--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2024-09-25  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* TODO (Support specifying strict mapping in referring offsets):
+	New entry.
+	(Print referred values in value printer): Likewise.
+
+2024-09-25  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-ios.c (expr_to_ios): Print IO space identifier in
 	decimal, not hexadecimal.
 
