pkl: fix flex rule for delimited alien tokens
With this commit, expressions like `$<*0*> + $<*1>' are equivalent to
addition of two literals instead of a single `*0*> + $<*1' token.

2024-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-lex.l: Fix pattern for matching delimited alien token
	to not use name definitions inside character class.
	(NOT_GT): New name definition.
	* testsuite/poke.cmd/ios-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2024-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-lex.l: Fix pattern for matching delimited alien token
+	to not use name definitions inside character class.
+	(NOT_GT): New name definition.
+	* testsuite/poke.cmd/ios-4.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2024-10-05  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* doc/poke.texi: Replace old representation of weird integers
