pickles: rennovate bpf.pk
Update the BPF pickle to support ISA v3 and v4, add as_asm methods
for all instruction types, and add several utility constructors for
instructions.

Changes to support the new instructions are quite invasive, and the
pickle has been largely rewritten.

2025-03-03  David Faust  <david.faust@oracle.com>

	* pickles/bpf.pk: Rewrite to support ISA v3 and v4 instruction
	formats.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-03-03  David Faust  <david.faust@oracle.com>
+
+	* pickles/bpf.pk: Rewrite to support ISA v3 and v4 instruction
+	formats.
+
 2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile constructor/mapper/
