--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-03-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* pickles/btf.pk (BTF_Type::has_type_ref): Use `int<32>' instead of `int'.
+	(BTF_Type::has_size): Likewise.
+
 2025-03-03  David Faust  <david.faust@oracle.com>
 
 	* doc/poke.texi (Object Formats): Add entry for BPF.
